[package]
name = "lambda-lsts-hvm"
version = "0.1.0"
edition = "2021"

[dependencies]
#hvm = "0.1"
hvm = { path = "HVM" }
aws_lambda_events = "0.6.3"
lambda_http = "0.6.0"
lambda_runtime = "0.6.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "hvm"
path = "src/main.rs"
test = false
